--- a/ApiNoNODOCO/ApiNoNODOCO.csproj
+++ b/ApiNoNODOCO/ApiNoNODOCO.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>b516f183-3478-43be-a1f1-4e87a5852a88</UserSecretsId>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
 
   <ItemGroup>
